--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -7,6 +7,7 @@ allow 103.109.101.105;
 allow 103.146.203.11;
 allow 103.164.54.199;
 allow 103.193.179.233;
+allow 103.196.37.111;
 allow 103.20.241.102;
 allow 103.251.167.10;
 allow 103.253.24.18;
@@ -579,7 +580,6 @@ allow 194.42.196.42;
 allow 194.53.137.156;
 allow 194.55.165.11;
 allow 194.55.167.14;
-allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.246.231.197;
@@ -871,7 +871,6 @@ allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
 allow 23.191.200.28;
-allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
@@ -1076,6 +1075,7 @@ allow 2620:18c:0:192::e0:223;
 allow 2620:18c:0:192::e0:224;
 allow 2620:18c:0:192::e0:225;
 allow 2620:7:6001::120;
+allow 2620:95:4007::111;
 allow 27.255.75.198;
 allow 2800:ba0:2:ee01::7583;
 allow 2800:ba0:6:c1::4858;
@@ -1158,7 +1158,6 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1433,7 +1432,6 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
-allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a12:a800:11:1:124:198:131:108;
 allow 2a12:a800:11:1:124:198:131:114;
 allow 2a12:a800:11:1:124:198:131:133;
@@ -1684,7 +1682,6 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
