--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -580,6 +580,7 @@ set_real_ip_from 194.42.196.42;
 set_real_ip_from 194.53.137.156;
 set_real_ip_from 194.55.165.11;
 set_real_ip_from 194.55.167.14;
+set_real_ip_from 195.160.220.104;
 set_real_ip_from 195.176.3.23;
 set_real_ip_from 195.176.3.24;
 set_real_ip_from 195.246.231.197;
@@ -871,6 +872,7 @@ set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
 set_real_ip_from 23.191.200.27;
 set_real_ip_from 23.191.200.28;
+set_real_ip_from 23.191.200.29;
 set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.30;
 set_real_ip_from 23.191.200.31;
@@ -1432,6 +1434,7 @@ set_real_ip_from 2a0f:df00:0:255::205;
 set_real_ip_from 2a0f:df00:0:255::206;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
+set_real_ip_from 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:a800:11:1:124:198:131:108;
 set_real_ip_from 2a12:a800:11:1:124:198:131:114;
 set_real_ip_from 2a12:a800:11:1:124:198:131:133;
@@ -1750,7 +1753,6 @@ set_real_ip_from 77.48.28.204;
 set_real_ip_from 77.48.28.237;
 set_real_ip_from 77.48.28.239;
 set_real_ip_from 77.81.247.72;
-set_real_ip_from 77.90.8.65;
 set_real_ip_from 78.142.18.219;
 set_real_ip_from 78.159.131.103;
 set_real_ip_from 78.159.131.225;
@@ -1770,6 +1772,7 @@ set_real_ip_from 82.118.248.205;
 set_real_ip_from 82.153.138.125;
 set_real_ip_from 82.153.138.184;
 set_real_ip_from 82.153.138.241;
+set_real_ip_from 82.153.138.57;
 set_real_ip_from 82.153.138.7;
 set_real_ip_from 82.197.182.161;
 set_real_ip_from 82.221.128.191;
