--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -101,7 +101,6 @@ allow 109.71.252.182;
 allow 109.71.252.88;
 allow 109.71.252.97;
 allow 114.35.245.150;
-allow 118.163.74.160;
 allow 121.78.28.166;
 allow 123.253.35.32;
 allow 124.198.131.108;
@@ -193,7 +192,6 @@ allow 173.224.219.44;
 allow 173.255.198.243;
 allow 176.118.193.33;
 allow 176.121.81.51;
-allow 176.58.121.177;
 allow 176.58.89.182;
 allow 176.65.132.187;
 allow 176.65.134.4;
@@ -207,7 +205,6 @@ allow 176.65.149.96;
 allow 176.97.114.202;
 allow 177.93.140.66;
 allow 178.17.170.144;
-allow 178.17.170.223;
 allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.14;
@@ -614,7 +611,6 @@ allow 199.195.253.124;
 allow 199.195.253.156;
 allow 199.195.253.180;
 allow 2001:1620:51a1::101;
-allow 2001:1af8:4060:a01f::468d;
 allow 2001:1b60:2:1:3935:104:0:1;
 allow 2001:1b60:3:221:3132:102:0:1;
 allow 2001:1b60:3:221:4134:101:0:1;
@@ -719,7 +715,6 @@ allow 2001:67c:e60:c0c:192:42:116:217;
 allow 2001:67c:e60:c0c:192:42:116:218;
 allow 2001:67c:e60:c0c:192:42:116:219;
 allow 2001:b011:4006:f9a1::b;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -890,7 +885,6 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
-allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -899,6 +893,7 @@ allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
+allow 23.191.200.28;
 allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
@@ -928,6 +923,7 @@ allow 2.58.56.220;
 allow 2.58.56.35;
 allow 2.58.56.43;
 allow 2.58.56.93;
+allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:95ff:fe5d:562;
@@ -940,7 +936,6 @@ allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:39c1::1;
 allow 2602:f6f6:2:90f1::1;
 allow 2602:f6f6:2:941d::1;
-allow 2602:f6f6:2:a27::5;
 allow 2602:f6f6:2:ad5c::1;
 allow 2602:f6f6:2:bab9::1;
 allow 2602:f6f6:2:cf34::1;
@@ -1162,7 +1157,6 @@ allow 2a01:270:9847::1;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
-allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
@@ -1217,7 +1211,6 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1260,6 +1253,7 @@ allow 2a07:e042:1:182::1;
 allow 2a09:61c0::20;
 allow 2a09:61c0::21;
 allow 2a09:61c0::22;
+allow 2a09:61c0::beef;
 allow 2a09:be40:28ff:50:b436:f5ff:fef5:a154;
 allow 2a0a:4cc0:2000:cd4c::12;
 allow 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
@@ -1561,7 +1555,6 @@ allow 2a12:a800:9:1:45:88:186:89;
 allow 2a12:a800:9:1:45:88:186:92;
 allow 2a14:3085::4f2;
 allow 2a14:7583:f607::;
-allow 2a14:c380:280:77::a;
 allow 2a14:c380:50:20::a;
 allow 2a14:c380:50:60::a;
 allow 2a14:c380:50:62::a;
@@ -1589,7 +1582,6 @@ allow 37.228.129.63;
 allow 37.46.196.22;
 allow 37.48.70.156;
 allow 37.77.56.238;
-allow 38.135.24.176;
 allow 38.135.24.30;
 allow 38.135.24.31;
 allow 38.135.24.32;
@@ -1716,7 +1708,6 @@ allow 46.165.193.216;
 allow 46.165.243.36;
 allow 46.232.251.191;
 allow 46.234.47.105;
-allow 46.246.96.123;
 allow 46.250.243.29;
 allow 46.253.4.208;
 allow 46.29.238.25;
@@ -1734,7 +1725,6 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1795,6 +1785,7 @@ allow 72.235.129.116;
 allow 72.5.43.62;
 allow 74.208.79.7;
 allow 74.82.47.194;
+allow 77.105.128.170;
 allow 77.239.97.46;
 allow 77.48.28.193;
 allow 77.48.28.204;
@@ -1836,7 +1827,6 @@ allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.239.46.144;
-allow 85.17.9.142;
 allow 85.208.139.110;
 allow 85.93.218.204;
 allow 85.93.31.31;
@@ -1848,7 +1838,6 @@ allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
 allow 87.120.222.33;
-allow 87.121.79.55;
 allow 88.151.192.2;
 allow 88.80.20.86;
 allow 88.80.26.2;
