--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -1,5 +1,4 @@
 allow 2001:1620:51a1::101;
-allow 2001:1af8:4060:a01f::468d;
 allow 2001:1b60:2:1:3935:104:0:1;
 allow 2001:1b60:3:221:3132:102:0:1;
 allow 2001:1b60:3:221:4134:101:0:1;
@@ -103,7 +102,6 @@ allow 2001:67c:e60:c0c:192:42:116:217;
 allow 2001:67c:e60:c0c:192:42:116:218;
 allow 2001:67c:e60:c0c:192:42:116:219;
 allow 2001:b011:4006:f9a1::b;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -119,6 +117,7 @@ allow 2402:1f00:8100:400::9;
 allow 2407:3640:2207:8882::1;
 allow 2407:3640:2259:6302::1;
 allow 2407:3641:2259:8208::1;
+allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:95ff:fe5d:562;
@@ -131,7 +130,6 @@ allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:39c1::1;
 allow 2602:f6f6:2:90f1::1;
 allow 2602:f6f6:2:941d::1;
-allow 2602:f6f6:2:a27::5;
 allow 2602:f6f6:2:ad5c::1;
 allow 2602:f6f6:2:bab9::1;
 allow 2602:f6f6:2:cf34::1;
@@ -352,7 +350,6 @@ allow 2a01:270:9847::1;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
-allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
@@ -407,7 +404,6 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -450,6 +446,7 @@ allow 2a07:e042:1:182::1;
 allow 2a09:61c0::20;
 allow 2a09:61c0::21;
 allow 2a09:61c0::22;
+allow 2a09:61c0::beef;
 allow 2a09:be40:28ff:50:b436:f5ff:fef5:a154;
 allow 2a0a:4cc0:2000:cd4c::12;
 allow 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
@@ -751,7 +748,6 @@ allow 2a12:a800:9:1:45:88:186:89;
 allow 2a12:a800:9:1:45:88:186:92;
 allow 2a14:3085::4f2;
 allow 2a14:7583:f607::;
-allow 2a14:c380:280:77::a;
 allow 2a14:c380:50:20::a;
 allow 2a14:c380:50:60::a;
 allow 2a14:c380:50:62::a;
