--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -121,6 +121,7 @@ allow 128.31.0.13;
 allow 130.193.15.186;
 allow 131.72.79.38;
 allow 136.244.111.163;
+allow 138.226.236.103;
 allow 138.59.18.110;
 allow 139.99.172.11;
 allow 139.99.8.57;
@@ -461,7 +462,6 @@ allow 185.252.232.218;
 allow 185.254.196.141;
 allow 185.32.126.43;
 allow 185.34.33.2;
-allow 185.35.202.222;
 allow 185.40.4.10;
 allow 185.40.4.100;
 allow 185.40.4.101;
@@ -898,7 +898,6 @@ allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
-allow 23.191.200.28;
 allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
@@ -1173,7 +1172,6 @@ allow 2a02:c204:2195:2012::1;
 allow 2a02:c204:2261:2270::1;
 allow 2a02:c204:2263:5153::1;
 allow 2a02:ec0:209:10::4;
-allow 2a02:ed06::222;
 allow 2a03:4000:13:7c3:dead:beef:ca1f:1337;
 allow 2a03:4000:15:928:dead:beef:ca1f:1337;
 allow 2a03:4000:17:a15:d4db:fbff:fef4:8b7b;
@@ -1218,6 +1216,7 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1736,6 +1735,7 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1827,11 +1827,9 @@ allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.131.71;
-allow 82.221.131.86;
 allow 82.221.139.190;
 allow 82.29.128.145;
 allow 83.217.9.73;
-allow 83.96.213.63;
 allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
